First Branch Commit

--- a/gallery.html
+++ b/gallery.html
@@ -5,8 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./styles/gallery.css">
 </head>
 <body>
-    
+
+    <main class = "main">
+
+            <section class = "gallery_vid_section">
+
+                <div class = "vid_div_1">
+
+                    <iframe class = "video" width="560" height="315" 
+                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; 
+                    encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+
+                    <iframe class = "video" width="560" height="315" 
+                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; 
+                    encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+
+                    <iframe class = "video"  width="560" height="315" 
+                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; 
+                    encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+
+                </div>
+
+            <div class = "vid_div_2">
+
+                <iframe class = "video"  width="560" height="315" 
+                src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; 
+                encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen></iframe>
+
+                <iframe class = "video"  width="560" height="315" 
+                src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; 
+                encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen></iframe>
+
+                <iframe class = "video"  width="560" height="315" 
+                src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; 
+                encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen></iframe>
+
+            </div>
+
+        </section>
+
+    </main>
+
 </body>
 </html>
