--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet"  href="./styles/main.css">
 </head>
 <body>
-    
+    <main>
+        <section class="titleImage">
+
+        </section>
+
+        <section>
+                <ul class="navLinks">
+                    <li class="navItem"><a href="buyTickets">Buy Tickets</a></li>
+                    <li class="navItem"><a href="contactUs">Contact Us</a></li>
+                    <li class="navItem"><a href="gallery">Gallery</a></li>
+                    <li class="navItem"><a href="careers">Careers</a></li>
+                    <li class="navItem"><a href="help">Help</a></li>
+                    <li class="navItem"><a href="home">Home</a></li>
+                  </ul>
+            </section>
+        </section>
+
+        <section class="buyTickets">
+
+        </section>
+
+        <section class="myersHouse">
+
+        </section>
+        
+    </main>
 </body>
 </html>
