added youtube link to careers

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<<<<<<< Updated upstream
-=======
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +18,7 @@
                     <li class="navItem"><a href="buyTickets">Buy Tickets</a></li>
                     <li class="navItem"><a href="contactUs">Contact Us</a></li>
                     <li class="navItem"><a href="gallery">Gallery</a></li>
-                    <li class="navItem"><a href="careers">Careers</a></li>
+                    <li class="navItem"><a href="https://youtu.be/xvFZjo5PgG0" src="https://youtu.be/xvFZjo5PgG0">Careers</a></li>
                     <li class="navItem"><a href="help">Help</a></li>
                     <li class="navItem"><a href="home">Home</a></li>
                   </ul>
@@ -38,4 +36,3 @@
     </main>
 </body>
 </html>
->>>>>>> Stashed changes
