--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./webfontki/stylesheet.css" type="text/css" charset="utf-8">
+
 </head>
 <body>
+    <div id="follower">
+    <div id="circle1"></div>
+    <div id="circle2"></div>
     
+</div>
+    <div>Spooky Shack</div>
+    <div class="test"></div>
+    <div class="custom-cursor"></div>
+
+<script type="module" src="./scripts/main.js"></script>    
 </body>
 </html>
