Renamed the title

--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spooky Shack the Bad Website</title>
+    <title>The Terrifyingly Bad Website</title>
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./webfontki/stylesheet.css" type="text/css" charset="utf-8">
     
