MVP for functionality of home page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ThE sPoOkY sHaCk</title>
     <link rel="stylesheet"  href="./styles/main.css">
 </head>
 <body>
@@ -15,22 +49,28 @@
 
         <section>
                 <ul class="navLinks">
-                    <li class="navItem"><a href="buyTickets">Buy Tickets</a></li>
-                    <li class="navItem"><a href="contactUs">Contact Us</a></li>
-                    <li class="navItem"><a href="gallery">Gallery</a></li>
-                    <li class="navItem"><a href="https://youtu.be/xvFZjo5PgG0" src="https://youtu.be/xvFZjo5PgG0">Careers</a></li>
+                    <li class="navItem"><a href="contactUs.html">Contact Us</a></li>
+                    <li class="navItem"><a href="gallery.html">Gallery</a></li>
                     <li class="navItem"><a href="help">Help</a></li>
-                    <li class="navItem"><a href="home">Home</a></li>
+                    <li class="navItem"><a href="#home">Home</a></li>
+                    <li class="navItem"><a href="https://youtu.be/xvFZjo5PgG0">Careers</a></li>
+                    <li class="navItem"><img id="cart" src="https://toppng.com/uploads/preview/shopping-cart-png-image-shopping-cart-icon-sv-11562865326ta92uix1ak.png"></li>
                   </ul>
             </section>
         </section>
 
         <section class="buyTickets">
+                <p>Buy Tickets</p>        
+        </section>
 
+        <section class="buyTixLink">
+            <p>here</p>
         </section>
 
         <section class="myersHouse">
-
+            <a id="home">
+                <img src="https://static.wixstatic.com/media/d03ef6_9da46a5496364038b3eb11ef43daabae~mv2.jpg/v1/fit/w_2500,h_1330,al_c/d03ef6_9da46a5496364038b3eb11ef43daabae~mv2.jpg" alt="The Myers' Home">
+            </a>
         </section>
         
     </main>
