changes to index.html

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
         <section>
                 <ul class="navLinks">
+                    <li class="navItem"><a href="#home">Home</a></li>
                     <li class="navItem"><a href="contactUs.html">Contact Us</a></li>
                     <li class="navItem"><a href="gallery.html">Gallery</a></li>
                     <li class="navItem"><a href="help">Help</a></li>
-                    <li class="navItem"><a href="#home">Home</a></li>
                     <li class="navItem"><a href="https://youtu.be/xvFZjo5PgG0">Careers</a></li>
                     <li class="navItem"><img id="cart" src="https://toppng.com/uploads/preview/shopping-cart-png-image-shopping-cart-icon-sv-11562865326ta92uix1ak.png"></li>
                   </ul>
@@ -60,7 +60,7 @@
         </section>
 
         <section class="buyTickets">
-                <p>Buy Tickets</p>        
+                <p><u>Buy Tickets</u></p>        
         </section>
 
         <section class="buyTixLink">
