Some more css stuff, still dunno have to have pumpkin spam on mouse click without a button

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <body>
     <!-- <element class="borderimg"></element> -->  
-
+<!-- <div class="emojitype"></div>
+    <span class="preloader"></span> -->
 <script type="module" src="./scripts/main.js"></script>
-    
 </body>
 </html>
