--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <li class="navItem"><a href="help">Help</a></li>
                     <li class="navItem"><a href="https://youtu.be/xvFZjo5PgG0">Careers</a></li>
                     <li class="navItem"><img id="cart" src="https://toppng.com/uploads/preview/shopping-cart-png-image-shopping-cart-icon-sv-11562865326ta92uix1ak.png"></li>
+                    <li class="navItem" id="count-el">0</li>
                   </ul>
             </section>
         </section>
@@ -64,7 +65,7 @@
         </section>
 
         <section class="buyTixLink">
-            <p>here</p>
+            <button id="increment-btn" onclick="increment()">Here</button>
         </section>
 
         <section class="myersHouse">
@@ -74,5 +75,6 @@
         </section>
         
     </main>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
