--- a/index.html
+++ b/index.html
@@ -16,36 +16,14 @@
     </div>
     <!-- Cursor End -->
 
-<article class="bloodyhand">
-    <div class="image-box" style="--image-url: url(https://www.vhv.rs/dpng/d/427-4275153_bloody-hand-print-png-png-download-blood-hand.png)">
-    <div class="test">Spooky Shack</div>
-</div>
-</article>
+
 </head>
 
 <body>
-    <!-- <element class="borderimg"></element> -->  
-<!-- <div class="emojitype"></div>
-    <span class="preloader"></span> -->
-<script type="module" src="./scripts/main.js"></script>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThE sPoOkY sHaCk</title>
-    <link rel="stylesheet"  href="./styles/main.css">
-</head>
-<body>
-    <main>
+    <main class="bloodyhand">
         <section class="titleImage">
-
+    <div class="test">Spooky Shack</div>
         </section>
-
         <section>
                 <ul class="navLinks">
                     <li class="navItem"><a href="#home">Home</a></li>
@@ -56,8 +34,6 @@
                     <li class="navItem"><img id="cart" src="https://toppng.com/uploads/preview/shopping-cart-png-image-shopping-cart-icon-sv-11562865326ta92uix1ak.png"></li>
                   </ul>
             </section>
-        </section>
-
         <section class="buyTickets">
                 <p><u>Buy Tickets</u></p>        
         </section>
@@ -71,7 +47,8 @@
                 <img src="https://static.wixstatic.com/media/d03ef6_9da46a5496364038b3eb11ef43daabae~mv2.jpg/v1/fit/w_2500,h_1330,al_c/d03ef6_9da46a5496364038b3eb11ef43daabae~mv2.jpg" alt="The Myers' Home">
             </a>
         </section>
-        
     </main>
+
+<script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
