Added pumpkin firework spam and removed junk comments

--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     </div>
     <!-- Cursor End -->
 
-
 </head>
 
 <body>
-    <main class="bloodyhand">
+    <main>
         <section class="titleImage">
     <div class="test">Spooky Shack</div>
         </section>
