gallery css updates and auto scream. Played a little with Main JS and index.Html. Ignore main and index changes. They aren't important

--- a/gallery.html
+++ b/gallery.html
@@ -11,26 +11,26 @@
 
     <main class = "main">
 
-            <section class = "gallery_vid_section">
+            <section class = "gallery">
 
                 <div class = "vid_div_1">
 
-                    <iframe class = "video" width="560" height="315" 
-                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                    <iframe class = "video one" width="315" height="315" 
+                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=0" 
                     title="YouTube video player" frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; 
                     encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen></iframe>
 
-                    <iframe class = "video" width="560" height="315" 
-                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                    <iframe class = "video one" width="315" height="315" 
+                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=0" 
                     title="YouTube video player" frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; 
                     encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen></iframe>
 
-                    <iframe class = "video"  width="560" height="315" 
-                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                    <iframe class = "video one"  width="315" height="315" 
+                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1" 
                     title="YouTube video player" frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; 
                     encrypted-media; gyroscope; picture-in-picture" 
@@ -40,22 +40,47 @@
 
             <div class = "vid_div_2">
 
-                <iframe class = "video"  width="560" height="315" 
-                src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                <iframe class = "video one" width="315" height="315" 
+                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=0" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; 
+                    encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+
+                <iframe class = "video one" width="315" height="315" 
+                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=0" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; 
+                    encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+
+                    <iframe class = "video one"  width="315" height="315" 
+                    src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; 
+                    encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+
+            </div>
+
+            <div class = "vid_div_3">
+
+                <iframe class = "video one"  width="315" height="315" 
+                src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1" 
                 title="YouTube video player" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; 
                 encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen></iframe>
 
-                <iframe class = "video"  width="560" height="315" 
-                src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                <iframe class = "video one"  width="315" height="315" 
+                src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1" 
                 title="YouTube video player" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; 
                 encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen></iframe>
 
-                <iframe class = "video"  width="560" height="315" 
-                src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1&mute=1" 
+                <iframe class = "video one"  width="315" height="315" 
+                src="https://www.youtube.com/embed/KWJSw7GIhi0?autoplay=1" 
                 title="YouTube video player" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; 
                 encrypted-media; gyroscope; picture-in-picture" 
