--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <p><u>Buy Tickets</u></p>        
         </section>
 
-        <section class="buyTixLink">
-            <button id="increment-btn" onclick="increment()">Here</button>
+        <section id="buybtn">
+            <!-- <button id="increment-btn" onclick="increment()">Here</button> -->
         </section>
 
         <section class="myersHouse">
@@ -49,7 +49,6 @@
             </a>
         </section>
     </main>
-    <script src="./scripts/main.js"></script>
 
 <script type="module" src="./scripts/main.js"></script>
 </body>
