--- a/contactUs.html
+++ b/contactUs.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -47,7 +47,7 @@
     <article class="links">
     <p id="back">Go Back</p>
     <img src="https://i.imgflip.com/23f1e0.jpg" alt="Masked guy from movie Saw" width="150">
-    <p id="home">Go Back</p> -->
+    <!-- <p id="home">Go Back</p> -->
     </article>
     
     <article class="radio">
@@ -180,4 +180,4 @@
     </main>
     <script type="module" src="./scripts/contactUs.js"></script>
 </body>
-</html> -->
+</html>
